# my-data-crawler

./: .gitignore  AGENTS.md  README.md
crawler/: README.md  pyproject.toml  requirements.txt
crawler/src/crawler/: __main__.py
crawler/src/crawler/classify/: __init__.py  codex_cli.py
crawler/src/crawler/discovery/: searxng_client.py  seed_companies.yaml  tier1.py  tier2.py
crawler/src/crawler/extract/: __init__.py  html_capsule.py
crawler/src/crawler/fetch/: http_fetcher.py  js_fetcher.py  robots.py
crawler/src/crawler/filters/: uusimaa_student.py
crawler/src/crawler/storage/: state_db.py  writer.py
crawler/src/crawler/utils/: logging_utils.py  url_utils.py
crawler/tests/: conftest.py  test_discovery_tier1.py  test_e2e_pipeline.py  test_fetcher.py  test_searxng_client.py  test_searxng_e2e.py
orchestrator/: README.md  build.gradle
orchestrator/src/main/java/com/mycrawler/orchestrator/: OrchestratorApplication.java
orchestrator/src/main/java/com/mycrawler/orchestrator/config/: AsyncConfiguration.java  SwaggerConfiguration.java
orchestrator/src/main/java/com/mycrawler/orchestrator/controller/: E2eController.java  HealthController.java  RunController.java  SearchController.java  SearchJobsController.java  SearxngController.java
orchestrator/src/main/java/com/mycrawler/orchestrator/db/: ExtractionRecord.java  ExtractionRecordRepository.java  ExtractionStatus.java  RunEntity.java  RunEvent.java  (+4 more)
orchestrator/src/main/resources/: application.yml
scripts/: start-orchestrator.sh  start-searxng.sh
scripts/searxng/: secret_key  settings.yml
(+32 files in other folders)
